[project]
name = "milp-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.7.14",
    "highspy>=1.11.0",
    "matplotlib>=3.10.3",
    "natsort>=8.4.0",
    "networkx>=3.5",
    "psutil>=7.0.0",
    "pulp>=3.2.1",
    "tabulate>=0.9.0",
]
