[project]
name = "milp-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.10.5",
    "highspy>=1.12.0",
    "matplotlib>=3.10.7",
    "natsort>=8.4.0",
    "networkx>=3.5",
    "rustworkx>=0.17.1",
    "psutil>=7.1.2",
    "tabulate>=0.9.0",
    "bidict>=0.23.1",
    "loguru>=0.7.3",
    "branca>=0.8.2",
    "folium>=0.20.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

[tool.ty.environment]
extra-paths = ["./src/milp_flow"]
